# jdMinecraftLauncher

./: .editorconfig  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  BuildBackend.py  GenerateSecrets.py  LICENSE  MANIFEST.in  Profile.py  README.md  RunMinecraft.py  SharedEnviroment.py  TranslationHelper.py  build_exe.py  hook-PyTaskbar.py  install-unix-datafiles.py  jdMinecraftLauncher.py  pyproject.toml  requirements.txt  setup.py
.github/: pull_request_template.md
.github/workflows/: close.yml
.woodpecker/: check-starting.yaml  lint.yaml  pypi-deploy.yaml  sourceforge-deploy.yaml
deploy/: Installer.nsi  com.gitlab.JakobDev.jdMinecraftLauncher.desktop  com.gitlab.JakobDev.jdMinecraftLauncher.metainfo.xml  com.gitlab.JakobDev.jdMinecraftLauncher.service  gnome-search-provider.ini  krunner.desktop  page.codeberg.JakobDev.jdMinecraftLauncher.desktop  page.codeberg.JakobDev.jdMinecraftLauncher.metainfo.xml  page.codeberg.JakobDev.jdMinecraftLauncher.service  sourceforge.py
deploy/translations/: AppStream.its  LINGUAS  de.po  es.po  fr.po  he.po  messages.pot  nl.po  ru.po
gui/: LoginWindow.py  MainWindow.py  ProfileWindow.py
jdMinecraftLauncher/: AccountManager.py  Constants.py  Crypto.py  DBusInterface.xml  DBusService.py  Distribution.toml  Enviroment.py  Environment.py  Functions.py  Globals.py  InstallThread.py  Languages.py  MicrosoftSecrets.py  Profile.py  ProfileCollection.py  ProfileImporter.py  RunMinecraft.py  Settings.py  Shortcut.py  jdMinecraftLauncher.py  secrets.json  version.txt
jdMinecraftLauncher/core/: AccountManager.py  ActionManager.py  ProfileCollection.py  VersionCollection.py
jdMinecraftLauncher/gui/: LoginWindow.py  MainWindow.py  ProfileWindow copy.py  ProfileWindow.py
jdMinecraftLauncher/gui/MainWindow/: AboutTab.py  AccountTab.py  FabricTab.py  ForgeTab.py  GameOutputTab.py  MainWindow.py  ModLoaderTab.py  ModpackTab.py  NewsTab.py  OptionsTab.py  ProfileEditorTab.py  VersionEditorTab.py
jdMinecraftLauncher/translation/: de_DE.lang  en_GB.lang
jdMinecraftLauncher/translations/: jdMinecraftLauncher_de.ts  jdMinecraftLauncher_es.ts  jdMinecraftLauncher_fr.ts  jdMinecraftLauncher_he.ts  jdMinecraftLauncher_nl.ts  jdMinecraftLauncher_ru.ts
jdMinecraftLauncher/ui/: AboutTab.ui  AccountTab.ui  MainWindow.ui  ModpackTab.ui  OptionsTab.ui  ProfileWindow.ui
jdMinecraftLauncher/utils/: InstallMrpack.py  InterProcessCommunication.py  LocalServer.py  ProfileImporter.py  Shortcut.py  UpdateChecker.py  WindowIconProgress.py
jdMinecraftLauncher/utils/DBusService/: Connection.py  Introspect.xml  __init__.py
jdMinecraftLauncher/utils/NewsGenerator/: __init__.py
jdMinecraftLauncher/utils/NewsGenerator/files/: News.html  Style.css
jdMinecraftLauncher/utils/RssGenerator/: __init__.py
tools/: BuildTranslations.py  CompileUI.py  GenerateSecrets.py  UpdateTranslations.py  UpdateUnixDataTranslations.py
translation/: en_GB.lang
