[build-system]
requires = ["setuptools", "PyQt6", "wheel"]
build-backend = "BuildBackend"
backend-path = ["."]

[project]
name = "jdMinecraftLauncher"
description = "Unofficial classic styled Minecraft Launcher"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["JakobDev", "Minecraft", "Mojang", "launcher", "PyQt"]
license = "GPL-3.0-only"
authors = [
    { name = "JakobDev", email = "jakobdev@gmx.de" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Environment :: Other Environment",
    "Environment :: X11 Applications :: Qt",
    "Natural Language :: English",
    "Natural Language :: German",
    "Topic :: Games/Entertainment",
    "Operating System :: OS Independent",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython"
]
dependencies = [
    "PyQt6",
    "PyQt6-WebEngine",
    "minecraft-launcher-lib",
    "requests",
    "feedparser"
]
dynamic = ["version"]

[project.optional-dependencies]
window-icon-progress-windows = ["PyTaskbarProgress"]
shortcut-linux = ["desktop-entry-lib"]
dbus-service = ["jeepney"]

[project.urls]
Source = "https://codeberg.org/JakobDev/jdMinecraftLauncher"
Issues = "https://codeberg.org/JakobDev/jdMinecraftLauncher/issues"
Translate = "https://translate.codeberg.org/projects/jdMinecraftLauncher"
Donation = "https://ko-fi.com/jakobdev"

[project.scripts]
jdMinecraftLauncher = "jdMinecraftLauncher.jdMinecraftLauncher:main"

[tool.setuptools.package-dir]
jdMinecraftLauncher = "jdMinecraftLauncher"

[tool.setuptools.dynamic]
version = { file = "jdMinecraftLauncher/version.txt" }

[tool.pyproject-appimage]
script = "jdMinecraftLauncher"
output = "jdMinecraftLauncher.AppImage"
icon = "jdMinecraftLauncher/Icon.svg"
rename-icon = "page.codeberg.JakobDev.jdMinecraftLauncher.png"
desktop-entry = "deploy/page.codeberg.JakobDev.jdMinecraftLauncher.desktop"
gettext-desktop-entry = true
appstream = "deploy/page.codeberg.JakobDev.jdMinecraftLauncher.metainfo.xml"
gettext-appstream = true
gettext-directory = "deploy/translations"
python-version = "3.13"
compression = "xz"
additional-packages = ["desktop-entry-lib"]

[tool.mypy]
pretty = true
ignore_missing_imports = true
disable_error_code = ["union-attr"]
files = ["jdMinecraftLauncher/**/*.py"]
